// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select column header component renders correctly when checked 1`] = `
<ForwardRef(TableCell)
  component="div"
  padding="checkbox"
  size="small"
  variant="head"
>
  <ForwardRef(Checkbox)
    checked={true}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    icon={
      <Memo
        fontSize="small"
      />
    }
    indeterminate={false}
    indeterminateIcon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select all rows",
      }
    }
    onClick={[Function]}
    size="small"
    sx={
      Object {
        "height": "20px",
        "margin": "auto",
      }
    }
  />
</ForwardRef(TableCell)>
`;

exports[`Select column header component renders correctly when indeterminate 1`] = `
<ForwardRef(TableCell)
  component="div"
  padding="checkbox"
  size="small"
  variant="head"
>
  <ForwardRef(Checkbox)
    checked={false}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    icon={
      <Memo
        fontSize="small"
      />
    }
    indeterminate={true}
    indeterminateIcon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select all rows",
      }
    }
    onClick={[Function]}
    size="small"
    sx={
      Object {
        "height": "20px",
        "margin": "auto",
      }
    }
  />
</ForwardRef(TableCell)>
`;

exports[`Select column header component renders correctly when unchecked 1`] = `
<ForwardRef(TableCell)
  component="div"
  padding="checkbox"
  size="small"
  variant="head"
>
  <ForwardRef(Checkbox)
    checked={false}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    icon={
      <Memo
        fontSize="small"
      />
    }
    indeterminate={false}
    indeterminateIcon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select all rows",
      }
    }
    onClick={[Function]}
    size="small"
    sx={
      Object {
        "height": "20px",
        "margin": "auto",
      }
    }
  />
</ForwardRef(TableCell)>
`;
